# api/handlers/transactions/model.go
@@ -19,7 +19,7 @@ type Scorecards struct {
 	Volume24h string
 }
 
-// AssetDTO is used for the return value of the function `GetTopAssetsByVolume`.
+// AssetDTO is used for the return value of the function `GetTopAssets`.
 type AssetDTO struct {
 	EmitterChain sdk.ChainID
 	TokenChain   sdk.ChainID
@@ -27,27 +27,34 @@ type AssetDTO struct {
 	Volume       string
 }
 
-// TopAssetsTimerange is used as an input parameter for the function `GetTopAssetsByVolume`.
-type TopAssetsTimerange string
+// ChainPairDTO is used for the return value of the function `GetTopChainPairs`.
+type ChainPairDTO struct {
+	EmitterChain      sdk.ChainID
+	DestinationChain  sdk.ChainID
+	NumberOfTransfers string
+}
+
+// TopStatisticsTimeSpan is used as an input parameter for the functions `GetTopAssets` and `GetTopChainPairs`.
+type TopStatisticsTimeSpan string
 
 const (
-	TopAssetsTimerange7Days  TopAssetsTimerange = "7d"
-	TopAssetsTimerange15Days TopAssetsTimerange = "15d"
-	TopAssetsTimerange30Days TopAssetsTimerange = "30d"
+	TimeSpan7Days  TopStatisticsTimeSpan = "7d"
+	TimeSpan15Days TopStatisticsTimeSpan = "15d"
+	TimeSpan30Days TopStatisticsTimeSpan = "30d"
 )
 
-// NewTopAssetsTimerange parses a string and returns a `TopAssetsTimerange`.
-func NewTopAssetsTimerange(s string) (*TopAssetsTimerange, error) {
+// ParseTopStatisticsTimeSpan parses a string and returns a `TopAssetsTimeSpan`.
+func ParseTopStatisticsTimeSpan(s string) (*TopStatisticsTimeSpan, error) {
 
-	if s == string(TopAssetsTimerange7Days) ||
-		s == string(TopAssetsTimerange15Days) ||
-		s == string(TopAssetsTimerange30Days) {
+	if s == string(TimeSpan7Days) ||
+		s == string(TimeSpan15Days) ||
+		s == string(TimeSpan30Days) {
 
-		tmp := TopAssetsTimerange(s)
+		tmp := TopStatisticsTimeSpan(s)
 		return &tmp, nil
 	}
 
-	return nil, fmt.Errorf("invalid timerange: %s", s)
+	return nil, fmt.Errorf("invalid time span: %s", s)
 }
 
 type GlobalTransactionDoc struct {
