# api/routes/wormscan/routes.go
@@ -67,7 +67,8 @@ func RegisterRoutes(
 	api.Get("/last-txs", transactionCtrl.GetLastTransactions)
 	api.Get("/scorecards", transactionCtrl.GetScorecards)
 	api.Get("/x-chain-activity", transactionCtrl.GetChainActivity)
-	api.Get("/top-assets-by-volume", transactionCtrl.GetTopAssetsByVolume)
+	api.Get("/top-assets-by-volume", transactionCtrl.GetTopAssets)
+	api.Get("/top-chain-pairs-by-num-transfers", transactionCtrl.GetTopChainPairs)
 
 	// vaas resource
 	vaas := api.Group("/vaas")
